--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,14 @@
 body, div, a {
     padding:0;
     margin:0;
-    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-family:'Open Sans', Arial, Helvetica, sans-serif;
+    background: #fafafa;
 }
 
 #calculator {
-	background-color: #999;
+  display: flex;
+  flex-direction: column;
+	background-color: #fdfdfd;
 	width: 310px;
 	height: 460px;
 	border: 3px black solid;
@@ -18,31 +21,37 @@ body, div, a {
 }
 
 #calculator a {
-	display: block;
-    float: left;
     cursor: pointer;
     text-decoration: none;
     text-align: center;
-    background: -moz-linear-gradient(top, #EDEDED, #DCDCDC);
-    background: -webkit-gradient(linear, left top, left bottom, from(#EDEDED), to(#DCDCDC));
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EDEDED', endColorstr='#DCDCDC');
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	-khtml-border-radius: 10px;
-    border-radius: 10px;
     color: black;
+
 }
 
-#numbers, #operators {
-	margin: auto;
+#numbers {
+  display: inline-flex;
+  flex-wrap: wrap;
+  margin-top: -425px;
+  padding-right: 0px;
+  }
+
+
+  #operators {
+  width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+
 }
 
 #operators a {
+  flex-direction: row;
 	width: 46px;
 	height: 45px;
 	font-size: 39px;
 	padding: 2px;
 	margin: 5px 6px;
+  justify-content: space-around;
+  background-color: rgb(63,81,181);
 }
 
 #numbers a {
@@ -51,12 +60,13 @@ body, div, a {
 	font-size: 32px;
 	padding: 10px;
 	margin: 5px;
+  justify-content: space-around;
+  border: 1px solid black;
 }
 
 #total {
     height: 70px;
     width: 300px;
-    margin:auto;
     background-color:white;
     margin-bottom: 5px;
     text-align: right;
@@ -65,20 +75,26 @@ body, div, a {
 }
 
 #side {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 	width: 49px;
-	float: right;
+  align-self: flex-end;
 }
 
 #side a {
 	width: 40px;
 	height: 40px;
-	float: right;
 	font-size: 32px;
 	padding: 10px;
 	margin: 5px;
+  border: 1px solid black;
+  align-self: center;
+
 }
 
 a#equals {
+
 	padding-top: 50px;
 	height: 100px;
 }
