--- a/public/styles.css
+++ b/public/styles.css
@@ -14,6 +14,7 @@ body, div, a {
 	border: 3px black solid;
 	margin: 10px auto;
 	padding: 5px;
+  align-items: flex-end;
 }
 
 #calculator a {
@@ -28,6 +29,7 @@ body, div, a {
   display: inline-flex;
   flex-wrap: wrap;
   width: 300px;
+  align-content: flex-end;
 
   }
 
@@ -83,7 +85,6 @@ justify-content: space-between;
 	padding: 10px;
 	margin: 5px;
   border: 1px solid black;
-  align-self: center;
 
 }
 
