--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 body, div, a {
-    padding:0;
+    padding:4px;
     margin:0;
     font-family:'Open Sans', Arial, Helvetica, sans-serif;
 
@@ -28,7 +28,7 @@ body, div, a {
 #numbers {
   display: inline-flex;
   flex-wrap: wrap;
-  width: 300px;
+  width: 287px;
   align-content: flex-end;
 
   }
@@ -36,13 +36,11 @@ body, div, a {
 
 #operators {
 display: inline-flex;
-justify-content: space-between;
-
 }
 
 #operators a {
   flex-direction: row;
-	width: 50px;
+	width: 51px;
 	height: 50px;
 	font-size: 39px;
 	padding: 10px;
@@ -56,7 +54,6 @@ justify-content: space-between;
 	height: 50px;
 	font-size: 32px;
 	padding: 10px;
-	margin: 2px;
   border: 1px solid black;
   background-color: pink;
 }
@@ -72,23 +69,16 @@ justify-content: space-between;
 }
 
 #side {
-  display: flex;
-  flex-direction: column;
-	width: 49px;
-  margin-right: 6px;
-}
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+    margin-top: 46px;
+    }
 
 #side a {
-	width: 40px;
-	height: 40px;
-	font-size: 32px;
+	width: 50px;
+	font-size: 44px;
 	padding: 10px;
-	margin: 5px;
   border: 1px solid black;
 
-}
-
-a#equals {
-	padding-top: 50px;
-	height: 100px;
 }
