--- a/public/styles.css
+++ b/public/styles.css
@@ -1,15 +1,19 @@
+* {
+  font-family:'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+
 body, div, a {
     padding:4px;
     margin:0;
-    font-family:'Open Sans', Arial, Helvetica, sans-serif;
-
 }
+
 
 #calculator {
   display: flex;
   flex-direction: column;
 	background-color: #fdfdfd;
-	width: 310px;
+	width: 295px;
 	height: 460px;
 	border: 3px black solid;
 	margin: 10px auto;
@@ -60,12 +64,12 @@ display: inline-flex;
 
 #total {
     height: 70px;
-    width: 300px;
+    width: 288px;
     background-color:white;
     margin-bottom: 5px;
     text-align: right;
-    font-size: 60px;
-    padding: 0px 5px;
+    font-size: 56px;
+
 }
 
 #side {
