--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,5 @@
 * {
+  /*box-sizing: border-box;*/
   font-family:'Open Sans', Arial, Helvetica, sans-serif;
 }
 
@@ -39,7 +40,10 @@ body, div, a {
 
 
 #operators {
-display: inline-flex;
+display: flex;
+flex-direction: row;
+align-self: stretch;
+height: 65px;
 }
 
 #operators a {
