--- a/public/styles.css
+++ b/public/styles.css
@@ -13,20 +13,22 @@ body, div, a {
 #calculator {
   display: flex;
   flex-direction: column;
-	background-color: #fdfdfd;
+	background-color: #fafafa;
 	width: 295px;
 	height: 460px;
-	border: 3px black solid;
+	border: 2px rgba(0,0,0,0.5) solid;
+  border-radius: 10px;
 	margin: 10px auto;
 	padding: 5px;
   align-items: flex-end;
+  box-shadow: 2px 2px gray;
 }
 
 #calculator a {
     cursor: pointer;
     text-decoration: none;
     text-align: center;
-    color: black;
+    color: rgb(0,0,0);
 
 }
 
@@ -53,7 +55,9 @@ height: 65px;
 	font-size: 39px;
 	padding: 10px;
 	margin: 2px;
-  background-color: rgb(63,81,181);
+  background-color: rgb(30,144,255);
+  border: 1px solid black;
+  box-shadow: 2px 2px gray;
 }
 
 #numbers a {
@@ -63,16 +67,19 @@ height: 65px;
 	font-size: 32px;
 	padding: 10px;
   border: 1px solid black;
-  background-color: pink;
+  background-color: rgb(220,216,217);
 }
 
 #total {
     height: 70px;
     width: 288px;
-    background-color:white;
+    background-color: rgba(215,215,215,0.5);
     margin-bottom: 5px;
     text-align: right;
     font-size: 56px;
+    -webkit-box-shadow: inset 2px 7px 147px -56px rgba(0,0,0,0.55);
+    -moz-box-shadow: inset 2px 7px 147px -56px rgba(0,0,0,0.55);
+    box-shadow: inset 2px 7px 147px -56px rgba(0,0,0,0.55);
 
 }
 
